fixed spacing and whitespace in CSS file

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,23 +2,6 @@
   text-align: left;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61dafb;
 }
@@ -36,16 +19,6 @@ h2 {
   padding-left: 10px;
 }
 
-/* h3 {
-  text-align: center;
-} */
-
-/* .icon {
-  height: 75px;
-  width: 75px;
-  margin-right: 10px;
-} */
-
 .teamPage-icon {
   height: 200px;
   width: auto;
@@ -58,8 +31,6 @@ h2 {
 }
 
 .team-col-one {
-  /* padding-right: 20px;
-  margin-right: 50px; */
   text-align: center;
 }
 
@@ -163,29 +134,3 @@ h2 {
   margin: 10px auto;
   text-align: center;
 }
-
-/* .parallax-container {
-  min-height: 380px;
-  line-height: 0;
-  height: auto;
-  color: rgba(255,255,255,.9);
-}
-  .parallax-container .section {
-    width: 100%;
-  }
-
-@media only screen and (max-width : 992px) {
-  .parallax-container .section {
-    position: absolute;
-    top: 40%;
-  }
-  #index-banner .section {
-    top: 10%;
-  }
-}
-
-@media only screen and (max-width : 600px) {
-  #index-banner .section {
-    top: 0;
-  }
-} */
